--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -50,9 +50,9 @@
 */
 .sui-advHeader {
     cursor: pointer;
-    text-transform: uppercase;
+    text-transform: capitalize;
     display: flex;
-    font-size: 1.45rem;
+    font-size: 1.55rem;
     height:3.5rem;
     padding-top:1.25rem;
     margin-bottom: .8rem;
@@ -103,8 +103,7 @@
 
 .sui-advHeader > .app-name {
     flex: 1;
-    font-weight: bold;
-    color: #555;
+    color: #333;
 }
 
 .sui-advBox-recent .c-HistoryViewer {
@@ -220,13 +219,13 @@
     border-bottom-width: 0.3rem;
     border-radius: 0 0 1.5rem 1.5rem;
     padding: 0.8rem 0.8rem 0.3rem;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     color: #333;
     margin: 0 0 .75rem;
 }
 
 .sui-advBox:first-child .sui-advEdit {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     text-transform: capitalize;
 }
 .sui-advEdit-facet-ctrls {
