--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -474,10 +474,10 @@ ul.fancytree-container {
     font-size:2rem;
 }
 .l-column__search nav:nth-of-type(2) > a {
-    font-size: 1.35rem;
+    font-size: 1.5rem;
     letter-spacing: 0.075rem;
     font-style: italic;
-    margin-left: .5rem;
+    margin-left: 1.5rem;
 }
 .l-column__search nav:nth-of-type(2) > a:hover {
     color: $color-mandala;
@@ -498,7 +498,7 @@ ul.fancytree-container {
     font-style:italic;
     font-size: 80%;
     letter-spacing: 0.075rem;
-    padding: .15rem 1rem;
+    padding: .05rem 1rem 0;
     border: 1px solid #ddd;
     background: #eee;
     margin: 0 .25rem 0;
@@ -521,6 +521,9 @@ ul.fancytree-container {
 }
 .l-column__search nav:nth-of-type(2) > a:active .badge {
     color: #4d59ca;
+}
+.l-column__search nav:nth-of-type(2) > a .badge-secondary {
+    display:none; /* this temporarily hides the search count total number */
 }
 /*
 .l-column__search > section {
