Implementing zustand state for updating kmap view settings in trees

--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -94,6 +94,10 @@ aside#l-column__search--treeNav .c-perspective-select {
             color: #df3d26;
         }
     }
+    span.bo,
+    span.zh {
+        font-size: 130%;
+    }
     &.selected > .c-kmapnode > .label {
         font-weight: bold;
     }
