--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -63,6 +63,10 @@
     }
 }
 
+.c-content__header__breadcrumb span.bo {
+    font-size: 120%;
+}
+
 $bcm-right: 0.5rem;
 
 .breadcrumb .breadcrumb-item:first-of-type::after {
@@ -85,4 +89,8 @@ $bcm-right: 0.5rem;
     display: none !important;
     margin: 0;
     padding: 0;
+}
+
+.c-content__header__perspective {
+    opacity: 0.7;
 }
