--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -146,10 +146,10 @@
     border-radius: 0 0 0.35rem 0.35rem;
 }
 .c-card__footer:hover {
-    background-color: rgba(105, 79, 4, 0.85);
+    background-color: #94751d;
 }
 .c-card__footer:active {
-    background-color: rgba(142, 117, 46, 0.85);
+    background-color: #907325;
 }
 .c-card__footer a {
     color: #fff;
