--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -10,7 +10,7 @@
 }
 .c-MainSearchToggle--group label {
     color: #444;
-    background-color: #eee;
+    background-color: #fff;
     padding: 1rem 0;
 }
 .c-MainSearchToggle--group label,
@@ -18,13 +18,28 @@
     box-shadow: none !important;
     outline: none !important;
     border-radius: 0;
-    border-width: 0 .1rem;
+    border-width: 0 0.15rem;
 }
 .c-MainSearchToggle--group svg {
-    font-size: 2rem;
+    font-size: 1.75rem;
+}
+.c-MainSearchToggle--group .btn.active::before {
+    content: '';
+    display: inline-block;
+    width: 1rem;
+    height: 1rem;
+    background-color: #4d59ca;
+    background-color: #fff;
+    position: absolute;
+    top: 3.6rem;
+    top: 3.4rem;
+    left: -0.35rem;
+    margin-left: 50%;
+    transform: rotate(45deg);
 }
 .c-MainSearchToggle--group .btn.active svg {
-
+    font-size: 2rem;
+    color: #4d59ca;
 }
 .c-MainSearchToggle--button {
     color: black;
@@ -34,24 +49,24 @@
 }
 .c-MainSearchToggle--button:hover {
     color: #000 !important;
-    background-color: #ddd !important;
+    background-color: #eee !important;
     opacity: 1;
 }
 .c-MainSearchToggle--button.focus,
 .c-MainSearchToggle--button.active,
 .c-MainSearchToggle--button.active:hover,
 .c-MainSearchToggle--button.active:focus {
-    color: #555 !important;
-    background-color: white !important;
+    color: #222 !important;
+    background-color: #fff !important;
     opacity: 1;
 }
 
 .c-MainSearchToggle--group .c-MainSearchToggle--button.active {
     &:first-child {
-        border-left: 1px solid #ccc !important;
+        border-left: 0.15rem solid #ccc !important;
     }
     &:nth-child(n + 2) {
-        border-right: 1px solid #ccc !important;
+        border-right: 0.15rem solid #ccc !important;
     }
 }
 
@@ -60,7 +75,6 @@
         border-right: 1px outset #ccc !important;
     }
     &:nth-child(n + 2) {
-        border-left: 1px inset #ccc !important;
     }
 }
 
