--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -29,6 +29,10 @@
         margin-right: 0.5rem;
         font-size: 1.35rem;
     }
+    label a {
+        margin-left: 0.5rem;
+        margin-right: 1.5rem;
+    }
     select {
         display: inline-block;
         width: fit-content;
