--- a/kmaps-app/public/css/searchui.css
+++ b/kmaps-app/public/css/searchui.css
@@ -472,7 +472,7 @@
     border: 1px solid #e0e0e0;
     border-bottom-width: 0.2rem;
     border-radius: 0 0 2rem 2rem;
-    padding: 0.8rem 0.8rem 0.3rem;
+    padding: 0.8rem 0.8rem 0.3rem 0.5rem;
     font-size: 1.25rem;
     color: #000;
     margin: 1.5rem 0.5rem 0;
@@ -517,6 +517,11 @@ color: #a4baec;
     color: #4d59ca;
     padding: 0.1rem 0 0.05rem 0.3rem;
 }
+.sui-advEditBool .sui-boolItem:nth-of-type(2),
+.sui-advEditBool #sui-boolItem-places-0-NOT {
+    padding-right: 0.25rem;
+}
+
 .sui-advEditList {
     overflow-x: hidden;
     max-height: 360px;
@@ -525,10 +530,12 @@ color: #a4baec;
     cursor: pointer;
     color: #000;
     padding: 0.2rem 1rem;
-    border-bottom: 2px solid #fafafa;
+    border-bottom: none !important;
+    border-radius: 1rem;
 }
 .sui-advEditLine:hover {
-    background-color: #dee7f1;
+    background-color: #e9f4ff;
+    border-right: 0.4rem solid #6b77ea;
 }
 .sui-advViewListPage {
     display: inline-block;
