--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -22,7 +22,8 @@ body.html {
 
 .two-columns {
     display: flex;
-    padding-right: 0.75rem;
+    padding: 0 0.75rem 0 0.5rem;
+    padding: 0 0 0 0.5rem;
 }
 .two-columns > div:nth-child(2) {
     border: none;
@@ -397,21 +398,21 @@ div.image-wrapper.center figcaption {
 // SEARCH Section ------- move this
 .advanced-search-and-tree .nav-tabs {
     padding: 0 0 0.5rem;
-    margin: 1rem 1rem 0;
+    margin: 0 1rem 0;
 }
 .advanced-search-and-tree .nav-tabs .nav-link {
     padding: 0 0.3rem;
-    margin: 0.5rem 0 0.2rem;
-    width: 30%;
+    margin: 0.85rem 0 0.1rem;
+    width: 31%;
     text-align: center;
     border: none;
     border-right: 1px solid #aaa;
-    font-size: 1.75rem;
+    font-size: 1.65rem;
     color: #333;
     letter-spacing: 0.0375rem;
 }
 .advanced-search-and-tree .nav-tabs .nav-link:nth-of-type(2) {
-    width: 39%;
+    width: 38%;
 }
 .advanced-search-and-tree .nav-tabs .nav-link:last-of-type {
     border-right: none;
@@ -429,7 +430,19 @@ div.image-wrapper.center figcaption {
 .advanced-search-and-tree .nav-tabs .nav-link.active#kmaps-tab-tab-terms {
     color: $color-terms !important;
 }
-
+.advanced-search-and-tree .nav-tabs .nav-link.active::before {
+    width: 0;
+    height: 0;
+    content: '';
+    display: inline-block;
+    border-style: solid;
+    border-width: 8px 8px 0 8px;
+    border-color: red transparent transparent transparent;
+    position: absolute;
+    top: -1rem;
+    left: 50%;
+    margin-left: -0.5rem;
+}
 ul.fancytree-container {
     height: auto !important;
 }
@@ -464,10 +477,9 @@ ul.fancytree-container {
 }
 .l-column__search nav:first-child {
     display: flex;
-    font-size: 2.75rem;
     position: absolute;
     right: 2rem;
-    top: 4rem;
+    top: 3.75rem;
 }
 .l-column__search nav:first-child .shanticon-cancel::before {
     color: #fff;
@@ -475,7 +487,7 @@ ul.fancytree-container {
 }
 .l-column__search nav:nth-of-type(1) > a {
     padding: 0;
-    font-size: 2rem;
+    font-size: 1.75rem;
 }
 .l-column__search nav:nth-of-type(2) > a {
     font-size: 1.5rem;
@@ -494,8 +506,9 @@ ul.fancytree-container {
 .l-column__search nav:nth-of-type(2) > div .navbar-text {
     text-transform: uppercase;
     font-weight: 600;
-    color: #555;
-    letter-spacing: 0.08rem;
+    color: #333;
+    letter-spacing: 0.075rem;
+    margin: 0.125rem 0.25rem 0 0;
 }
 .l-column__search nav:nth-of-type(2) > div a {
     font-style: italic;
@@ -562,7 +575,7 @@ ul.fancytree-container {
 }
 // View mode for content column
 .c-buttonGroup__viewMode {
-    margin: 0 0 1rem;
+    margin: 0;
     text-align: right;
 }
 .sui-facetList-horiz {
@@ -613,7 +626,7 @@ ul.fancytree-container {
 .c-view {
     margin: 0;
     .c-featurePager__container {
-        /* text-align: center; */
+        text-align: center;
         margin-bottom: 1rem;
         padding: 3rem 1rem 0;
         padding-top: 1rem;
