--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -99,6 +99,7 @@
     padding: 0;
     margin-right: 1rem;
     margin-left: 1rem;
+    margin-bottom: 2rem;
 }
 .c-relatedViewer > * {
     padding: 0 1rem 0 2rem;
@@ -114,6 +115,7 @@
 .c-related__item.selected {
     background: #fff;
     border-color: #ddd;
+    border-radius: 0.5rem;
 }
 .c-relatedViewer #sui-rln-places {
     font-size: 1.15rem;
@@ -154,7 +156,8 @@
 .u-related__list__header {
     padding: 1rem 0 0.25rem 0.5rem;
     margin: 0 1rem 0.8rem;
-    font-size: 1.25rem;
+    font-size: 1.45rem;
+    font-weight: bold;
     color: #111;
     letter-spacing: 0.075rem;
     border-bottom: 1px solid #ddd;
